show raw byte count on hover

--- a/app/templates/directory.hbs
+++ b/app/templates/directory.hbs
@@ -69,7 +69,7 @@
           </span>
         </td>
 
-        <td class="size">
+        <td class="size" title="{{commify file.size}} bytes">
           {{filesize file.size}}
         </td>
 {{/if}}
