set dialog origins to .actions to prevent focus weirdness

--- a/app/components/delete-dialog/template.hbs
+++ b/app/components/delete-dialog/template.hbs
@@ -1,5 +1,5 @@
 {{#if active}}
-  {{#paper-dialog fullscreen=true origin=".delete-button"}}
+  {{#paper-dialog fullscreen=true origin=".actions"}}
     {{#paper-toolbar}}
       <div class="md-toolbar-tools">
         <h2>Delete Directory</h2>
