--- a/app/components/new-directory-dialog/template.hbs
+++ b/app/components/new-directory-dialog/template.hbs
@@ -1,5 +1,5 @@
 {{#if active}}
-  {{#paper-dialog fullscreen=true origin=".new-directory-button"}}
+  {{#paper-dialog fullscreen=true origin=".actions"}}
     {{#paper-toolbar}}
       <div class="md-toolbar-tools">
         <h2>New Directory</h2>
