--- a/app/styles/directory.scss
+++ b/app/styles/directory.scss
@@ -72,6 +72,12 @@
   }
 }
 
+.empty-notice {
+  margin-top: 4em;
+  padding: 2em;
+  text-align: center !important;
+}
+
 .file-list md-list-item:nth-child(even) {
   background-color: #F5F5F5;
 }
