--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -21,7 +21,7 @@
     Start the client. In the <strong>Server Name</strong> field, use this value:
     <div class="server-url">
       {{#if useAuthInServerUrl}}
-        {{offer-iframe content="$API_PROTO//sandstorm:$API_TOKEN@$API_HOST/" clipboardButton="right" unauthenticated=unauthenticated}}
+        {{offer-iframe content="$API_PROTO//$GRAIN_TITLE_SLUG:$API_TOKEN@$API_HOST/" clipboardButton="right" unauthenticated=unauthenticated}}
       {{else}}
         {{offer-iframe content="$API_PROTO//$API_HOST/" clipboardButton="right" unauthenticated=unauthenticated}}
       {{/if}}
@@ -34,7 +34,7 @@
     <div class="authentication">
       <div class="username-field">
         <label for="username">Username</label>
-        <div class="username">{{offer-iframe content="sandstorm" clipboardButton="right" unauthenticated=unauthenticated}}</div>
+        <div class="username">{{offer-iframe content="$GRAIN_TITLE_SLUG" clipboardButton="right" unauthenticated=unauthenticated}}</div>
       </div>
 
       <div class="password-field">
