--- a/app/templates/directory-menu.hbs
+++ b/app/templates/directory-menu.hbs
@@ -1,7 +1,7 @@
 <div class="actions">
   {{#if canEdit}}
     {{#paper-button class="icon-button new-directory-button" onClick="chooseUpload"}}
-      {{paper-icon "file-upload"}}
+      {{paper-icon "file-upload" aria-label="Upload"}}
 
       {{#tooltip-on-component}}
         Upload
@@ -9,7 +9,7 @@
     {{/paper-button}}
 
     {{#paper-button class="icon-button" onClick=(action (mut newDialogActive true))}}
-      {{paper-icon "add-circle-outline"}}
+      {{paper-icon "add-circle-outline" aria-label="New directory"}}
 
       {{#tooltip-on-component}}
         New Directory
@@ -19,7 +19,7 @@
   {{/if}}
 
   {{#paper-button class="icon-button" onClick="slideshow"}}
-    {{paper-icon "photo"}}
+    {{paper-icon "photo" aria-label="Slideshow"}}
 
     {{#tooltip-on-component}}
       Slideshow
@@ -27,7 +27,7 @@
   {{/paper-button}}
 
   {{#paper-button class="icon-button" onClick="downloadDirectory"}}
-    {{paper-icon "file-download"}}
+    {{paper-icon "file-download" aria-label="Download directory as zip"}}
 
       {{#tooltip-on-component}}
         Download (zip)
@@ -36,7 +36,7 @@
 
   {{#if canEdit}}
     {{#paper-button class="icon-button delete-button" onClick=(action (mut deleteDialogActive true))}}
-      {{paper-icon "delete"}}
+      {{paper-icon "delete" aria-label="Delete"}}
 
       {{#tooltip-on-component}}
         {{#if isRoot}}
@@ -55,7 +55,7 @@
     {{#paper-menu position="target-right target" width=4 as |menu|}}
 
       {{#paper-button onClick=(action "toggleMenu" target=menu) class="more-button" iconButton=true}}
-          {{paper-icon "more-vert" class="md-menu-origin"}}
+          {{paper-icon "more-vert" class="md-menu-origin" aria-label="Menu"}}
       {{/paper-button}}
 
     {{else}}
