--- a/app/templates/sidebar.hbs
+++ b/app/templates/sidebar.hbs
@@ -1,3 +1,4 @@
+<div class="logo-bg" aria-hidden="true"></div>
 <img src="/images/sidebar-logo@2x.png" width="50" height="61" alt="Davros">
 
 {{#link-to "home" current-when="file"}}
