--- a/app/styles/directory.scss
+++ b/app/styles/directory.scss
@@ -20,6 +20,7 @@
     vertical-align: top;
     padding: 12px 16px;
     text-align: left;
+    line-height: 1.4;
 
     &.name {
       width: 100%;
@@ -40,9 +41,10 @@
 
       .paper-icon, img {
         color: #999;
-        padding-right: 0.3em;
+        padding-right: 12px;
         float: left;
         display: inline-block;
+        line-height: 0.9;
       }
 
       .folder {
