--- a/app/styles/file.scss
+++ b/app/styles/file.scss
@@ -1,9 +1,4 @@
 .file {
-  position: absolute;
-  top: 48px;
-  left: 0;
-  right: 0;
-  bottom: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -77,10 +72,10 @@
     }
 
     .markdown {
-      width: 100%;
-      height: 100%;
-      overflow: auto;
+      margin-top: 1em;
+      border-top: 3px solid #DDD;
       background-color: #FFF;
+      max-width: 900px;
 
       .inner {
         padding: 10px;
