--- a/app/styles/clients.scss
+++ b/app/styles/clients.scss
@@ -5,10 +5,10 @@
 
   .server-url {
     text-align: center;
+    overflow: hidden;
 
     iframe {
       margin: 20px auto 5px auto;
-      width: 95%;
       max-width: 600px;
       border: 1px solid #000;
       padding: 3px;
@@ -24,34 +24,30 @@
   }
 
   .authentication {
-    width: 510px;
+    max-width: 510px;
     margin: auto;
     padding: 20px 0;
 
     .username-field, .password-field {
-      margin-bottom: 10px;
-      height: 2em;
+      clear: both;
     }
 
     label {
-      width: 90px;
-      text-align: right;
-      float: left;
+      display: block;
       line-height: 1.7em;
-      padding-right: 4px;
     }
 
     .username, .password {
-      float: left;
-      width: 400px;
+      overflow: hidden;
     }
 
     .username iframe, .password iframe {
       border: 1px solid #000;
       padding: 3px;
       height: 1.2em;
-      width: 400px;
+      max-width: 500px;
       background-color: #FFF;
+      width: 95%;
     }
   }
 }
