--- a/app/styles/file.scss
+++ b/app/styles/file.scss
@@ -1,10 +1,4 @@
 .file {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-content: stretch;
-  align-items: stretch;
-
   padding: 10px;
 
   .meta {
@@ -38,11 +32,7 @@
   }
 
   .preview {
-    flex: 0;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
 
     audio, .no-preview {
       width: 100%;
@@ -56,7 +46,6 @@
       max-width: 100%;
       max-height: 1200px;
       margin: auto 0;
-      flex: 0 0 auto;
     }
 
     video {
