--- a/app/styles/upload.scss
+++ b/app/styles/upload.scss
@@ -59,10 +59,14 @@
       padding: 30px;
       background-color: rgba(0,0,0,0.5);
       border-radius: 5px;
+      position: relative;
 
       md-icon {
         color: color($primary);
-        font-size: 1.5em;
+        position: absolute;
+        top: -18px;
+        left: -18px;
+        font-size: 36px;
       }
 
       .breadcrumb {
@@ -71,6 +75,7 @@
 
         a {
           color: #FFF;
+          text-decoration: none;
         }
       }
     }
