Disable javascript in iframe preview
My (mis)understanding was that an iframe sandbox that lacked "allow-same-origin" would have no document.location and would not be able to resolve relative URLs. The first is true, the second is not. So it is possible to XHR POST from the iframe sandbox, and while you can't read the response due to cross-origin, you can create files and delete files. We're disabling javascript inside html previews until we can come up with a better solution.

--- a/app/components/files/type-document/template.hbs
+++ b/app/components/files/type-document/template.hbs
@@ -1,5 +1,5 @@
 {{#if canSandbox}}
-  <iframe srcdoc="{{srcDoc}}" sandbox="allow-scripts"></iframe>
+  <iframe srcdoc="{{srcDoc}}" sandbox></iframe>
 {{else}}
   <p>Your browser doesn't support sandboxing, so we can't show a preview inline.</p>
 {{/if}}
