--- a/app/components/path-breadcrumb/template.hbs
+++ b/app/components/path-breadcrumb/template.hbs
@@ -1,14 +1,24 @@
 <div class="full">
-  {{#link-to 'file' (query-params path="")}}home{{/link-to}}
+  {{#link-to 'files'}}home{{/link-to}}
 
   {{#each parts as |part|}}
     <span class="separator">/</span>
-    {{#link-to 'file' (query-params path=part.path)}}{{part.name}}{{/link-to}}
+    {{#link-to 'file' part.path}}{{part.name}}{{/link-to}}
   {{/each}}
 
   /
 </div>
 
 <div class="parent-only">
-  {{#link-to 'file' (query-params path=parentPath)}}{{#if isHome}}home{{else}}...{{/if}}{{/link-to}} /
+  {{#if isHome}}
+    {{#link-to 'files'}}home{{/link-to}}
+  {{else}}
+    {{#if (eq parentPath '')}}
+      {{#link-to 'files'}}...{{/link-to}}
+    {{else}}
+      {{#link-to 'file' parentPath}}...{{/link-to}}
+    {{/if}}
+  {{/if}}
+
+  /
 </div>
