update to remove owncloud recommendation

--- a/app/templates/clients.hbs
+++ b/app/templates/clients.hbs
@@ -4,29 +4,11 @@
 
 {{#paper-content class="clients" flex-layout="column" flex=true}}
   <p class="content">
-    Synchronize your file storage with your local device using a desktop or mobile client. Davros is compatible with the <a href="https://owncloud.org" target="_blank">ownCloud</a> Desktop, iOS, and Android clients. Davros is neither affiliated with nor endorsed by ownCloud.
+    You can synchronize your file storage with your local device using a desktop or mobile WebDAV client. Unfortunately, <b>OwnCloud/NextCloud are not supported</b>, due to protocol incompatibilities.
 
-    <h2>Step 1: Download a client from ownCloud</h2>
-
-    <div class="client-download">
-      <div>Choose your platform from the client download page:</div>
-
-      <a class="md-button md-default-theme md-primary md-raised" href="https://owncloud.org/install/#install-clients" target="_blank">
-        Download client
-      </a>
-    </div>
-
-    <h2>Step 2: Configure the client</h2>
+    <h2>Configuring the client</h2>
 
     Start the client. In the <strong>Server Name</strong> field, use this value:
-    <div class="server-url">
-      {{#if useAuthInServerUrl}}
-        {{offer-iframe content="$API_PROTO//$GRAIN_TITLE_SLUG:$API_TOKEN@$API_HOST/" clipboardButton="right" unauthenticated=unauthenticated}}
-      {{else}}
-        {{offer-iframe content="$API_PROTO//$API_HOST/" clipboardButton="right" unauthenticated=unauthenticated}}
-      {{/if}}
-    </div>
-    If you are using WebDav, use this path:
     <div class="server-url">
       {{#if useAuthInServerUrl}}
         {{offer-iframe content="$API_PROTO//$GRAIN_TITLE_SLUG:$API_TOKEN@$API_HOST/remote.php/webdav/" clipboardButton="right" unauthenticated=unauthenticated}}
