fix some deprecations

--- a/app/components/files/type-document/template.hbs
+++ b/app/components/files/type-document/template.hbs
@@ -4,7 +4,7 @@
 
 {{#if canSandbox}}
   {{#if (eq previewState "loaded")}}
-    <iframe class="{{size}}" srcdoc="{{srcDoc}}" sandbox></iframe>
+    <iframe class={{size}} srcdoc={{srcDoc}} sandbox></iframe>
   {{/if}}
 
   {{#if (eq previewState "loading")}}
