--- a/app/templates/directory.hbs
+++ b/app/templates/directory.hbs
@@ -31,40 +31,40 @@
     {{/if}}
   </div>
 
-  {{partial 'directory-menu'}}
+  {{partial "directory-menu"}}
 {{/title-bar}}
 
 {{#if model.sortedFiles}}
-  <table class="file-list {{if showExtraFields '' 'noExtraFields'}}">
+  <table class="file-list {{if showExtraFields "" "noExtraFields"}}">
     <thead>
       <tr>
         <th class="name">Name</th>
-        <th class="updated" {{action (toggle this "showExtraFields")}}>Updated</th>
-        <th class="size" {{action (toggle this "showExtraFields")}}>Size</th>
+        <th class="updated"><span {{action (toggle this "showExtraFields")}}>Updated</span></th>
+        <th class="size"><span {{action (toggle this "showExtraFields")}}>Size</span></th>
       </tr>
     </thead>
 
     <tbody>
       {{#each model.sortedFiles as |file|}}
         <tr>
-          {{#link-to 'file' (unbound file.linkedPath) class="name" tagName="td"}}
+          {{#link-to "file" file.linkedPath class="name" tagName="td"}}
             <div class="filename">
               {{#if file.isDirectory}}
                 <md-icon class="paper-icon md-font material-icons md-default-theme">folder</md-icon>
               {{else}}
-              {{#if (eq file.type 'image')}}
-                {{image-thumbnail original=file.rawPath timestamp=file.mtime width=24 height=24 op="fit"}}
-              {{else}}
-                <md-icon aria-label="type {{file.type}}" class="paper-icon md-font material-icons md-default-theme">{{-paper-underscore file.typeIcon}}</md-icon>
+                {{#if (eq file.type "image")}}
+                  {{image-thumbnail original=file.rawPath timestamp=file.mtime width=24 height=24 op="fit"}}
+                {{else}}
+                  <md-icon aria-label="type {{file.type}}" class="paper-icon md-font material-icons md-default-theme">{{-paper-underscore file.typeIcon}}</md-icon>
+                {{/if}}
               {{/if}}
-            {{/if}}
 
               <div class="truncated">{{file.name}}</div>
             </div>
           {{/link-to}}
 
           {{#if showExtraFields}}
-            <td class="updated" title="{{file.mtime}}">
+            <td class="updated" title={{file.mtime}}>
               <span class="short">
                 {{#if model.lotsOfFiles}}
                   {{moment-from-now file.mtime locale="en-short" hideSuffix=true}}
@@ -96,4 +96,4 @@
   </div>
 {{/if}}
 
-{{partial 'plugins/gallery'}}
+{{partial "plugins/gallery"}}
