--- a/app/templates/file-menu.hbs
+++ b/app/templates/file-menu.hbs
@@ -10,7 +10,7 @@
   {{/if}}
 </div>
 
-<!-- Only displayed on mobile -->
+{{!-- Only displayed on mobile --}}
 <div class="compact-actions">
   <div class="more">
     {{#paper-menu position="target-right target" as |menu|}}
