--- a/app/components/files/type-pdf/template.hbs
+++ b/app/components/files/type-pdf/template.hbs
@@ -1,3 +1,3 @@
-<object data="{{model.rawPath}}" type="application/pdf">
-  <embed src="{{model.rawPath}}" type="application/pdf" />
+<object data={{model.rawPath}} type="application/pdf">
+  <embed src={{model.rawPath}} type="application/pdf">
 </object>
