--- a/app/components/path-breadcrumb/template.hbs
+++ b/app/components/path-breadcrumb/template.hbs
@@ -1,9 +1,9 @@
 <div class="full">
-  {{#link-to 'files'}}home{{/link-to}}
+  {{#link-to "files"}}home{{/link-to}}
 
   {{#each parts as |part|}}
     <span class="separator">/</span>
-    {{#link-to 'file' part.path}}{{part.name}}{{/link-to}}
+    {{#link-to "file" part.path}}{{part.name}}{{/link-to}}
   {{/each}}
 
   /
@@ -11,12 +11,12 @@
 
 <div class="parent-only">
   {{#if isHome}}
-    {{#link-to 'files'}}home{{/link-to}}
+    {{#link-to "files"}}home{{/link-to}}
   {{else}}
-    {{#if (eq parentPath '')}}
-      {{#link-to 'files'}}...{{/link-to}}
+    {{#if (eq parentPath "")}}
+      {{#link-to "files"}}...{{/link-to}}
     {{else}}
-      {{#link-to 'file' parentPath}}...{{/link-to}}
+      {{#link-to "file" parentPath}}...{{/link-to}}
     {{/if}}
   {{/if}}
 
