--- a/app/templates/about.hbs
+++ b/app/templates/about.hbs
@@ -4,17 +4,17 @@
 
 {{#paper-content class="about" flex-layout="column" flex=true}}
   <p class="content">
-    Davros is a fully <a target="_blank" href="https://github.com/mnutt/davros/blob/master/LICENSE">open source</a> file storage platform, built specifically to run inside of Sandstorm. It allows you to store files on your Sandstorm server, and optionally sync them among many desktop clients.
+    Davros is a fully <a target="_blank" rel="noopener" href="https://github.com/mnutt/davros/blob/master/LICENSE">open source</a> file storage platform, built specifically to run inside of Sandstorm. It allows you to store files on your Sandstorm server, and optionally sync them among many desktop clients.
     <br><br>
-    We welcome contributions! <a target="_blank" href="https://github.com/mnutt/davros">Fork Davros on Github</a> and open a pull request.
+    We welcome contributions! <a target="_blank" rel="noopener" href="https://github.com/mnutt/davros">Fork Davros on Github</a> and open a pull request.
 
     <h2>Software Powering Davros</h2>
 
     <ul>
-      <li><a target="_blank" href="http://emberjs.com/">Ember.js</a> is a client-side MVC framework that enables all of the javascript interactions.</li>
-      <li><a target="_blank" href="https://github.com/mikedeboer/jsDAV">jsDAV</a> handles server-side syncing of files to clients.</li>
-      <li><a target="_blank" href="https://nodejs.org">Node.js</a> runs the backend.</li>
-      <li><a target="_blank" href="https://sandstorm.io">Sandstorm</a> handles user authentication, sharing, and keeping the apps in line.</li>
+      <li><a target="_blank" rel="noopener" href="http://emberjs.com/">Ember.js</a> is a client-side MVC framework that enables all of the javascript interactions.</li>
+      <li><a target="_blank" rel="noopener" href="https://github.com/mikedeboer/jsDAV">jsDAV</a> handles server-side syncing of files to clients.</li>
+      <li><a target="_blank" rel="noopener" href="https://nodejs.org">Node.js</a> runs the backend.</li>
+      <li><a target="_blank" rel="noopener" href="https://sandstorm.io">Sandstorm</a> handles user authentication, sharing, and keeping the apps in line.</li>
     </ul>
 
     <h2>Release Notes</h2>
